# PPHook

./: CMakeLists.txt  README.md  ZyThread.h  hook1.c  hook1.h  hook2.c  hook2.h  ipcdef.h  ld.so.preload  main.c  serverbase.h  structmsg.h
monipc/: CMakeLists.txt  ipcserver.cpp  ipcserver.h  serverbase.cpp
preload/: CMakeLists.txt  define.h  general.c  general.h  hook.c  hook_comm.c  hook_comm.h  init.c  ipclient.c  ipclient.h  msyscall.h  munistd.h  setwhite.c  setwhite.h  syscall.c  syscall.h  syscallid.h  ver.lds
testdm/: CMakeLists.txt  dm.cpp
testipc/: CMakeLists.txt  main.cpp  taskopt.cpp  taskopt.h
